# menu-qa-chatbot

./: .gitignore  README.md  assignment.txt  pyproject.toml
data/: dataset.json
notebooks/: demo.ipynb  inspect_normalized.ipynb  trace_inspection.ipynb
src/: __init__.py  bootstrap.py  chat.py  export.py  fallback_router.py  formatting.py  index.py  ingest.py  inspect.py  llm_router.py  models.py  normalize.py  router.py  router_schema.py  tools.py  utils.py
tests/: golden_questions.json  test_bootstrap.py  test_chat_orchestrator.py  test_export.py  test_fallback_router.py  test_index.py  test_ingest.py  test_inspect.py  test_llm_router.py  test_normalize.py  test_resolution.py  test_router_orchestrator.py  test_tools_category.py  test_tools_discounts.py  test_tools_nutrition.py  test_tools_price.py
